# cpu-info

./: Cargo.toml  README.md
src/: cpu_info.rs  main.rs
src/cpu_info/: linux_cpu_info.rs  windows_cpu_info.rs
src/utils/: color_config.rs  color_utils.rs  mod.rs  terminal_utils.rs
