[package]
name = "cpu-info"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "*", features = [
  "Win32_System_SystemInformation",
  "Win32_System_Performance",
  "Win32_System_Power",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_System_SystemServices",
  "Win32_Foundation"
] }
term_size = "0.3.2"
term_cursor = "0.2.1"
colored = "*"
chrono = { version = "0.4", default-features = false, features = ["clock"] }